--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ GOOGLE_CLIENT_SECRET=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
 
 MONOGDB_URI=mongodb+srv://nilanchalpanda2003:nilanchalpanda2003@cluster0.avkl5uc.mongodb.net/Promptia?retryWrites=true&w=majority
 
-NEXTAUTH_URL=https://promptia-dr35vn9df-nilanchals-projects.vercel.app/
+NEXTAUTH_URL=https://promptiasphere.vercel.app/
 
-NEXTAUTH_URL_INTERNAL=https://promptia-dr35vn9df-nilanchals-projects.vercel.app/
+NEXTAUTH_URL_INTERNAL=https://promptiasphere.vercel.app/
 
 NEXTAUTH_SECRET=c+RN7n8UMIPyN+4jHAY2Kk51Ba8l9MEJzd71Kgsm7yU=
 
